--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-GITHUB_API_KEY = "github personal access key"
+GITHUB_API_KEY='github api key'
+AWS_ACCESS_KEY_ID='aws access key'
+AWS_SECRET_ACCESS_KEY='aws secret key'
+S3_BUCKET_NAME='bucket name'
+AWS_REGION='region
